# vscode-gotthard-theme

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  nodemon.json  package-lock.json  package.json  release.config.js  vsc-extension-quickstart.md
.github/ISSUE_TEMPLATE/: -pencil--new-language-optimization.md  bug-report.md  framework-optimization.md  language-optimization.md
.github/config/: codeql.yaml
.github/workflows/: codeql-analysis.yml  integration.yml  publish.yml  release.yml
docs/: COLORS.md
fixtures/: .gitignore  JavaController.java  Other.ts  Powershell.ps1  README.md  ReactComponent.tsx  SassStyles.scss  VueButton.vue  angular.component.html  build.gradle  css-styles.css  database.sql  debug-pause.js  flask.py  foodplan.xml  index.html  merge-conflict.js  package-lock.json  package.json  pipeline.yml  sass-styles.scss  script.sh  tsconfig.json
fixtures/frameworks/angular/: angular.component.ts  rxjs.ts
fixtures/frameworks/docker/: Dockerfile
fixtures/frameworks/graphql/: gql.ts
fixtures/languages/: Cargo.toml  Java.java  css.css  graphql.graphql  html.html  javascript.js  json.json  less.less  markdown.md  php.php  powershell.ps1  rust.rs  typescript.ts  yaml.yml
fixtures/test/: asdf.js
src/: generator.ts  themes.ts  types.ts
src/colors/: grayscale-dark-medium.ts  grayscale-dark.ts  grayscale-light.ts  primary-dark.ts  primary-light.ts
src/templates/: theme-old.template.json  theme.template.json
themes/: Gotthard-color-theme.json  gotthard-medium-dark.json  gotthard.json
(+2 files in other folders)
