[book]
title = "Rust By Example"
description = "Rust by Example (RBE) is a collection of runnable examples that illustrate various Rust concepts and standard libraries."
author = "The Rust Community"

[output.html.playpen]
editable = true
editor = "ace"
line-numbers = true

[output.html.fold]
enable = true

[output.html]
git-repository-url = "https://github.com/rust-lang/rust-by-example"

[rust]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
clap = { version = "4.0", features = ["derive"] }
human-panic = "1.1.5"

